Fix header on mobile

--- a/src/components/styles/Header.scss
+++ b/src/components/styles/Header.scss
@@ -502,3 +502,10 @@
     // background-color: #252833;
   }
 }
+
+.web3ModalButton {
+  margin-right: -12px;
+  @include media('screen', '<tablet') {
+    margin: 0 -12px;
+  }
+}
